--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="hitory-contents">
           <h3>Born</h3>
           <div class="picture">
-            <img src="images/002tri.JPG" alt="産まれた直後">
+            <img src="images/002tri.jpg" alt="産まれた直後">
             <img src="images/003tri.jpg" alt="目があいた">
             <img src="images/004tri.jpg" alt="のび">
 
