--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="container">
         <h2>HISTORY</h2>
         <div class="hitory-contents">
-          <h3>Born</h3>
+          <h3>Just Born</h3>
           <div class="picture">
             <img src="images/002tri.jpg" alt="産まれた直後">
             <img src="images/003tri.jpg" alt="目があいた">
