--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h2>EVENT</h2>
         <div class="event-contents">
           <p>20XX年 4月　：　</p>
-          <a href="#">3,380gで産まれる。顔はお父さん似とよく言われる。</a>
+          <a href="#">3,380gで産まれる。</a>
         </div>
         <div class="event-contents">
           <p>20XX年 4月　：　</p>
@@ -61,64 +61,64 @@
             <img src="images/004tri.jpg" alt="のび">
 
           </div>
-          <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+          <p>予定日を７日過ぎて産まれました。顔はお父さん似といろんな人に言われました。</p>
 
         </div>
 
         <div class="hitory-contents">
           <h3>3 months ～</h3>
           <div class="picture">
-            <img src="images/002tri.JPG" alt="産まれた直後">
-            <img src="images/003tri.jpg" alt="目があいた">
-            <img src="images/004tri.jpg" alt="のび">
+            <img src="images/005tri.JPG" alt="産まれた直後">
+            <img src="images/006tri.jpg" alt="目があいた">
+            <img src="images/007tri.jpg" alt="のび">
 
           </div>
-          <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+          <p>表情が豊かになってよく笑顔が見えるようになりました。ハイハイもできるようになってよりアクティブに。</p>
 
         </div>
 
         <div class="hitory-contents">
           <h3>6 months ～</h3>
           <div class="picture">
-            <img src="images/002tri.JPG" alt="産まれた直後">
-            <img src="images/003tri.jpg" alt="目があいた">
-            <img src="images/004tri.jpg" alt="のび">
+            <img src="images/008tri.JPG" alt="産まれた直後">
+            <img src="images/009tri.jpg" alt="目があいた">
+            <img src="images/010tri.jpg" alt="のび">
 
           </div>
-          <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+          <p>つかまり立ちもできるようになりさらにアクティブに</p>
 
         </div>
 
         <div class="hitory-contents">
           <h3>9 months ～</h3>
           <div class="picture">
-            <img src="images/002tri.JPG" alt="産まれた直後">
-            <img src="images/003tri.jpg" alt="目があいた">
-            <img src="images/004tri.jpg" alt="のび">
+            <img src="images/011tri.JPG" alt="産まれた直後">
+            <img src="images/012tri.jpg" alt="目があいた">
+            <img src="images/013tri.jpg" alt="のび">
 
           </div>
-          <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+          <p>保育園に行き始めました。なれるまでしばらくは大泣きの毎日でした。</p>
 
         </div>
 
         <div class="hitory-contents">
           <h3>1 years ～</h3>
           <div class="picture">
-            <img src="images/002tri.JPG" alt="産まれた直後">
-            <img src="images/003tri.jpg" alt="目があいた">
-            <img src="images/004tri.jpg" alt="のび">
+            <img src="images/014tri.JPG" alt="産まれた直後">
+            <img src="images/015tri.jpg" alt="目があいた">
+            <img src="images/016tri.jpg" alt="のび">
 
           </div>
-          <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+          <p>たくさん歩けるようになりいろんなところに遊びにいけるようになりました。</p>
 
         </div>
 
         <div class="hitory-contents">
           <h3>1 years & 3 months ～</h3>
           <div class="picture">
-            <img src="images/002tri.JPG" alt="産まれた直後">
-            <img src="images/003tri.jpg" alt="目があいた">
-            <img src="images/004tri.jpg" alt="のび">
+            <img src="images/017tri.JPG" alt="産まれた直後">
+            <img src="images/018tri.jpg" alt="目があいた">
+            <img src="images/019tri.jpg" alt="のび">
 
           </div>
           <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
@@ -128,21 +128,21 @@
         <div class="hitory-contents">
           <h3>1years & 6 months ～</h3>
           <div class="picture">
-            <img src="images/002tri.JPG" alt="産まれた直後">
-            <img src="images/003tri.jpg" alt="目があいた">
-            <img src="images/004tri.jpg" alt="のび">
+            <img src="images/020tri.JPG" alt="産まれた直後">
+            <img src="images/021tri.jpg" alt="目があいた">
+            <img src="images/022tri.jpg" alt="のび">
 
           </div>
-          <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+          <p>年末には川崎病で２週間も入院することになり大変な毎日でした。痛いことをたくさんされて大泣きでしたが、徐々に調子を取り戻して最期にはプレイルームに行きたがって家に帰ろうとしませんでした。</p>
 
         </div>
 
         <div class="hitory-contents">
           <h3>2 years ～</h3>
           <div class="picture">
-            <img src="images/002tri.JPG" alt="産まれた直後">
-            <img src="images/003tri.jpg" alt="目があいた">
-            <img src="images/004tri.jpg" alt="のび">
+            <img src="images/023tri.JPG" alt="産まれた直後">
+            <img src="images/023tri.jpg" alt="目があいた">
+            <img src="images/023tri.jpg" alt="のび">
 
           </div>
           <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
