--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
         <h2>EVENT</h2>
         <div class="event-contents">
           <p>20XX年 4月　：　</p>
-          <a href="#">3,380gで産まれる。</a>
+          <a href="#">XXXXXXXXXXXXXXXXXXXXXXXXXXX</a>
         </div>
         <div class="event-contents">
           <p>20XX年 4月　：　</p>
-          <a href="#">3,380gで産まれる</a>
+          <a href="#">XXXXXXXXXXXXXXXXXXXXXXXXXXX</a>
         </div>
         <div class="event-contents">
           <p>20XX年 4月　：　</p>
-          <a href="#">3,380gで産まれる</a>
+          <a href="#">XXXXXXXXXXXXXXXXXXXXXXXXXXX</a>
         </div>
         <div class="event-contents">
           <p>20XX年 4月　：　</p>
-          <a href="#">3,380gで産まれる</a>
+          <a href="#">XXXXXXXXXXXXXXXXXXXXXXXXXXX</a>
         </div>
         <div class="event-contents">
           <p>20XX年 4月　：　</p>
-          <a href="#">3,380gで産まれる</a>
+          <a href="#">XXXXXXXXXXXXXXXXXXXXXXXXXXX</a>
         </div>
       </div>
     </div>
