--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h2>EVENT</h2>
         <div class="event-contents">
           <p>20XX年 4月　：　</p>
-          <a href="#">XXXXXXXXXXXXXXXXXXXXXXXXXXX</a>
+          <a href="#">3,380gで産まれる。</a>
         </div>
         <div class="event-contents">
           <p>20XX年 4月　：　</p>
@@ -68,7 +68,7 @@
         <div class="hitory-contents">
           <h3>3 months ～</h3>
           <div class="picture">
-            <img src="images/005tri.JPG" alt="産まれた直後">
+            <img src="images/005tri.jpg" alt="産まれた直後">
             <img src="images/006tri.jpg" alt="目があいた">
             <img src="images/007tri.jpg" alt="のび">
 
@@ -80,7 +80,7 @@
         <div class="hitory-contents">
           <h3>6 months ～</h3>
           <div class="picture">
-            <img src="images/008tri.JPG" alt="産まれた直後">
+            <img src="images/008tri.jpg" alt="産まれた直後">
             <img src="images/009tri.jpg" alt="目があいた">
             <img src="images/010tri.jpg" alt="のび">
 
@@ -92,7 +92,7 @@
         <div class="hitory-contents">
           <h3>9 months ～</h3>
           <div class="picture">
-            <img src="images/011tri.JPG" alt="産まれた直後">
+            <img src="images/011tri.jpg" alt="産まれた直後">
             <img src="images/012tri.jpg" alt="目があいた">
             <img src="images/013tri.jpg" alt="のび">
 
@@ -104,7 +104,7 @@
         <div class="hitory-contents">
           <h3>1 years ～</h3>
           <div class="picture">
-            <img src="images/014tri.JPG" alt="産まれた直後">
+            <img src="images/014tri.jpg" alt="産まれた直後">
             <img src="images/015tri.jpg" alt="目があいた">
             <img src="images/016tri.jpg" alt="のび">
 
@@ -116,7 +116,7 @@
         <div class="hitory-contents">
           <h3>1 years & 3 months ～</h3>
           <div class="picture">
-            <img src="images/017tri.JPG" alt="産まれた直後">
+            <img src="images/017tri.jpg" alt="産まれた直後">
             <img src="images/018tri.jpg" alt="目があいた">
             <img src="images/019tri.jpg" alt="のび">
 
@@ -128,7 +128,7 @@
         <div class="hitory-contents">
           <h3>1years & 6 months ～</h3>
           <div class="picture">
-            <img src="images/020tri.JPG" alt="産まれた直後">
+            <img src="images/020tri.jpg" alt="産まれた直後">
             <img src="images/021tri.jpg" alt="目があいた">
             <img src="images/022tri.jpg" alt="のび">
 
@@ -140,7 +140,7 @@
         <div class="hitory-contents">
           <h3>2 years ～</h3>
           <div class="picture">
-            <img src="images/023tri.JPG" alt="産まれた直後">
+            <img src="images/023tri.jpg" alt="産まれた直後">
             <img src="images/023tri.jpg" alt="目があいた">
             <img src="images/023tri.jpg" alt="のび">
 
