--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <img src="images/007tri.jpg" alt="のび">
 
           </div>
-          <p>表情が豊かになってよく笑顔が見えるようになりました。ハイハイもできるようになってよりアクティブに。</p>
+          <p>表情が豊かになってよく笑顔が見えるようになりました。お座りもできるように。</p>
 
         </div>
 
@@ -85,7 +85,7 @@
             <img src="images/010tri.jpg" alt="のび">
 
           </div>
-          <p>つかまり立ちもできるようになりさらにアクティブに</p>
+          <p>ハイハイもできるようになってよりアクティブに。</p>
 
         </div>
 
@@ -97,7 +97,7 @@
             <img src="images/013tri.jpg" alt="のび">
 
           </div>
-          <p>保育園に行き始めました。なれるまでしばらくは大泣きの毎日でした。</p>
+          <p>つかまり立ちもできるようになりさらにアクティブに。４月には保育園に行き始めました。なれるまでしばらくは大泣きの毎日でした。</p>
 
         </div>
 
@@ -133,7 +133,7 @@
             <img src="images/022tri.jpg" alt="のび">
 
           </div>
-          <p>年末には川崎病で２週間も入院することになり大変な毎日でした。痛いことをたくさんされて大泣きでしたが、徐々に調子を取り戻して最期にはプレイルームに行きたがって家に帰ろうとしませんでした。</p>
+          <p>年末には川崎病で２週間も入院することになり大変な毎日でした。痛いことをたくさんされて大泣きでしたが、徐々に調子を取り戻して最後にはプレイルームに行きたがって家に帰ろうとしませんでした。</p>
 
         </div>
 
@@ -145,7 +145,7 @@
             <img src="images/023tri.jpg" alt="のび">
 
           </div>
-          <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+          <p>飛行機と新幹線に大ハマり。誕生日プレゼントはプラレールをもらって大喜び。</p>
 
         </div>
 
